<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.comparativa.ComparativaFragment"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/txSeleccionarPiloto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/seleccionarPiloto1Titulo"
            android:gravity="center"
            android:drawableLeft="@drawable/linea_blanca"
            android:drawableRight="@drawable/linea_blanca"
            android:textColor="@color/white"
            android:textSize="16sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ftComparativaPiloto1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/fotoPiloto"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerPiloto1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="15dp"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txTituloNombrePiloto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tituloNombrePiloto"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/txNombrePiloto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                         />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txTituloFechaNacimientoPiloto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/fechaNacimientoPiloto"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/txFechaNacimientoPiloto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txTituloNacionalidadPiloto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nacionalidadPiloto"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/txNacionalidadPiloto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txSeleccionarPiloto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/seleccionarPiloto2Titulo"
            android:gravity="center"
            android:drawableLeft="@drawable/linea_blanca"
            android:drawableRight="@drawable/linea_blanca"
            android:textColor="@color/white"
            android:textSize="16sp"
            />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ftComparativaPiloto2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/fotoPiloto"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerPiloto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txTituloNombrePiloto2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tituloNombrePiloto"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txNombrePiloto2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txTituloFechaNacimientoPiloto2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fechaNacimientoPiloto"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txFechaNacimientoPiloto2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txTituloNacionalidadPiloto2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nacionalidadPiloto"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txNacionalidadPiloto2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <Button
            android:id="@+id/buttonComparativa"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonComparar"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"/>


    </LinearLayout>

</FrameLayout>