<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.pilotos.PilotosFragment"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="70dp">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pilotosRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>